--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
+set -g status-bg default
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
