--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,6 +64,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selecti
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# yazi image preview 
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
