--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,6 +17,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # catppuccin theme config 
 tmux_orange="#fab387"
