--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -7,7 +7,7 @@
 
 $mainMod = SUPER
 $files = thunar
-$term = kitty
+$term = ghostty 
 $browser = firefox
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
