--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -1,4 +1,3 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # User Settings
 # This is where you put your own settings as this will not be touched during update 
 # if the upgrade.sh is used.
@@ -24,16 +23,14 @@ master {
 }
 
 general {
-  sensitivity = 1.00
   border_size = 2
-  apply_sens_to_raw = 1
   gaps_in = 6
   gaps_out = 8
 
   resize_on_border = true
    
   col.active_border = $color12 
-  col.inactive_border = $backgroundCol
+  # col.inactive_border = $backgroundCol
 
   layout = dwindle
 }
@@ -49,11 +46,11 @@ decoration {
   dim_strength = 0.1
   dim_special = 0.8
 
-  drop_shadow = true
-  shadow_range = 6
-  shadow_render_power = 1
-  col.shadow = $color12
-  col.shadow_inactive = 0x50000000
+  # drop_shadow = true
+  # shadow_range = 6
+  # shadow_render_power = 1
+  # col.shadow = $color12
+  # col.shadow_inactive = 0x50000000
 
   blur {
   	enabled = true	
@@ -85,10 +82,10 @@ animations {
 }
 
 input {
-  kb_layout = br
+  kb_layout = br, us
   kb_variant =
   kb_model =
-  kb_options =
+  kb_options = grp:win_space_toggle
   kb_rules =
   repeat_rate = 50
   repeat_delay = 300
@@ -96,6 +93,9 @@ input {
   left_handed = false
   follow_mouse = true
   float_switch_override_focus = false
+
+  sensitivity = 0.40
+  accel_profile = flat
 
   touchpad {
     disable_while_typing = true
@@ -148,7 +148,6 @@ misc {
   enable_swallow = true
   swallow_regex = ^(kitty)$
   focus_on_activate = false
-  no_direct_scanout = true #for fullscreen games
   initial_workspace_tracking = 0
   middle_click_paste = false
 }
