--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,6 @@
 window-decoration = false
-background-opacity = 0.7
-font-size = 14
+background-opacity = 0.85
+font-size = 12
 theme= catppuccin-mocha
+shell-integration = zsh
+font-family = "JetBrains Mono"
