update catppuccin tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,39 +19,43 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'sainnhe/tmux-fzf'
 
-# catppuccin theme config 
-tmux_orange="#fab387"
-set -g @catppuccin_pane_status_enabled "yes"
-set -g @catppuccin_pane_left_separator ""
-set -g @catppuccin_pane_right_separator ""
-set -g @catppuccin_pane_middle_separator "█ "
-set -g @catppuccin_pane_number_position "left"
-set -g @catppuccin_pane_default_fill "number"
-set -g @catppuccin_pane_default_text "#{b:pane_current_path}"
-set -g @catppuccin_pane_border_style "fg=$tmux_orange"
-set -g @catppuccin_pane_active_border_style "fg=$tmux_orange"
-set -g @catppuccin_pane_color "$tmux_orange"
-set -g @catppuccin_pane_background_color "$tmux_orange"
+set -ogq @catppuccin_menu_selected_style "fg=#{@thm_fg},bold,bg=#{@thm_overlay_0}"
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -ogq @catppuccin_pane_status_enabled "yes" # set to "yes" to enable
+set -ogq @catppuccin_pane_border_status "yes" # set to "yes" to enable
+set -ogq @catppuccin_pane_border_style "fg=#{@thm_overlay_0}"
+set -ogq @catppuccin_pane_active_border_style "##{?pane_in_mode,fg=#{@thm_lavender},##{?pane_synchronized,fg=#{@thm_mauve},fg=#{@thm_lavender}}}"
+set -ogq @catppuccin_pane_left_separator ""
+set -ogq @catppuccin_pane_middle_separator "█"
+set -ogq @catppuccin_pane_right_separator ""
+set -ogq @catppuccin_pane_color "#{@thm_green}"
+set -ogq @catppuccin_pane_background_color "#{@thm_surface_0}"
+set -ogq @catppuccin_pane_default_text "##{b:pane_current_path}"
+set -ogq @catppuccin_pane_default_fill "number"
+set -ogq @catppuccin_pane_number_position "left" # right, left
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+set -ogq @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
+set -ogq @catppuccin_window_text_color "#{@thm_surface_0}"
+set -ogq @catppuccin_window_number_color "#{@thm_overlay_2}"
+set -ogq @catppuccin_window_text " #W"
+set -ogq @catppuccin_window_number "#I"
+set -ogq @catppuccin_window_current_text_color "#{@thm_surface_1}"
+set -ogq @catppuccin_window_current_number_color "#{@thm_mauve}"
+set -ogq @catppuccin_window_current_text " #W"
+set -ogq @catppuccin_window_current_number "#I"
+set -ogq @catppuccin_window_number_position "left"
+set -ogq @catppuccin_window_flags "none" # none, icon, or text
+# Status line options
+set -ogq @catppuccin_status_left_separator ""
+set -ogq @catppuccin_status_right_separator ""
+set -ogq @catppuccin_status_connect_separator "no" # yes, no
+set -ogq @catppuccin_status_fill "icon"
+set -ogq @catppuccin_status_module_bg_color "#{@thm_surface_0}"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "application session date_time"
-
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_status_background "default"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+# status line modules 
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session} #{E:@catppuccin_status_date_time}"
 set -g @catppuccin_date_time_text " %H:%M %d-%m-%Y"
 
 # set vi-mode
