--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,7 +64,7 @@ set-window-option -g mode-keys vi
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 #panes are opened in the current path
 bind '"' split-window -v -c "#{pane_current_path}"
