--- a/.config/hypr/configs/Settings.conf
+++ b/.config/hypr/configs/Settings.conf
@@ -1,8 +1,3 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-
-# Default Settings. avoid changing this file as during update, this will be replaced
-
-# refer to Hyprland wiki for more info https://wiki.hyprland.org/Configuring/Variables
-
-# Initial boot script enable to apply initial wallpapers, theming, new settings etc.
+permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+exec-once = hyprpm reload -n
 exec-once = $HOME/.config/hypr/initial-boot.sh
