--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -26,25 +26,7 @@ env = MOZ_ENABLE_WAYLAND,1
 # electron >28 apps (may help)
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-# NVIDIA 
-# This is from Hyprland Wiki. Below will be activated nvidia gpu detected
-#env = LIBVA_DRIVER_NAME,nvidia 
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = NVD_BACKEND,direct 
 
-# additional ENV's for nvidia. Caution, activate with care
-#env = GBM_BACKEND,nvidia-drm 
+# fixes the empty “open with” in Dolphin in Hyprland
+env = XDG_MENU_PREFIX,arch-
 
-#env = __NV_PRIME_RENDER_OFFLOAD,1 
-#env = __VK_LAYER_NV_optimus,NVIDIA_only
-#env = WLR_DRM_NO_ATOMIC,1
-
-
-# FOR VM and POSSIBLY NVIDIA
-#env = WLR_NO_HARDWARE_CURSORS,1 # On hyprland >v0.41, now configured on variable cursor section
-#env = WLR_RENDERER_ALLOW_SOFTWARE,1
-
-# nvidia firefox (for hardware acceleration on FF)?
-# check this post https://github.com/elFarto/nvidia-vaapi-driver#configuration
-#env = MOZ_DISABLE_RDD_SANDBOX,1
-#env = EGL_PLATFORM,wayland
