--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -6,7 +6,7 @@
 # See also Laptops.conf for laptops keybinds 
 
 $mainMod = SUPER
-$files = thunar
+$files = dolphin
 $term = ghostty 
 $browser = firefox
 $scriptsDir = $HOME/.config/hypr/scripts
