--- a/.config/hypr/configs/Settings.conf
+++ b/.config/hypr/configs/Settings.conf
@@ -1,2 +1,3 @@
 exec-once = hyprpm reload -n
 exec-once = $HOME/.config/hypr/initial-boot.sh
+exec-once = $HOME/.config/hypr/UserScripts/fixDolphin.sh
