--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -168,3 +168,6 @@ bind = $mainMod, comma, split-workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#hyprexpo
+bind = $mainMod, j, hyprexpo:expo, toggle
