--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -8,8 +8,8 @@
 # WINDOWRULE v2
 # windowrule v2 - position
 # windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
-windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
-windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
+# windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
+# windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
 
 # windowrule v2 to avoid idle for fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
@@ -18,8 +18,8 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 
 # windowrule v2 move to workspace (silent)
-windowrulev2 = workspace 6 silent, class:^(virt-manager)$
-windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
+# windowrulev2 = workspace 6 silent, class:^(virt-manager)$
+# windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
 # windowrule v2 - float
 windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$ 
@@ -47,37 +47,37 @@ windowrulev2 = float, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = float, class:^([Ff]erdium)$
 
 # windowrule v2 - opacity #enable as desired
-windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
-windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser(-beta|-dev)?)$
-windowrulev2 = opacity 0.9 0.6, class:^([Tt]horium-browser)$
-windowrulev2 = opacity 0.9 0.8, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
-windowrulev2 = opacity 0.9 0.8, class:^(google-chrome(-beta|-dev|-unstable)?)$
-windowrulev2 = opacity 0.94 0.86, class:^(chrome-.+-Default)$ # Chrome PWAs
-windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
-windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
-windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor)$
-windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
-windowrulev2 = opacity 0.9 0.8, class:^(Alacritty)$
-windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
-windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
-windowrulev2 = opacity 0.9 0.7, class:^(VSCodium|codium-url-handler)$
-windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
-windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
-windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
-windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.gnome.Nautilus)$
-windowrulev2 = opacity 0.9 0.8, class:^(VSCode|code-url-handler)$
-windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
-windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
-windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot-gui|org.gnome.baobab)$
-windowrulev2 = opacity 0.9 0.8, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
-windowrulev2 = opacity 0.8 0.7, class:^(app.drey.Warp)$ # Warp file transfer
-windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
-windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
-windowrulev2 = opacity 0.9 0.8, class:^(xdg-desktop-portal-gtk)$ # gnome-keyring gui
-windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
-windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
+# windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
+# windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser(-beta|-dev)?)$
+# windowrulev2 = opacity 0.9 0.6, class:^([Tt]horium-browser)$
+# windowrulev2 = opacity 0.9 0.8, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
+# windowrulev2 = opacity 0.9 0.8, class:^(google-chrome(-beta|-dev|-unstable)?)$
+# windowrulev2 = opacity 0.94 0.86, class:^(chrome-.+-Default)$ # Chrome PWAs
+# windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
+# windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
+# windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor)$
+# windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
+# windowrulev2 = opacity 0.9 0.8, class:^(Alacritty)$
+# windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
+# windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
+# windowrulev2 = opacity 0.9 0.7, class:^(VSCodium|codium-url-handler)$
+# windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
+# windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
+# windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
+# windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
+# windowrulev2 = opacity 0.9 0.8, class:^(org.gnome.Nautilus)$
+# windowrulev2 = opacity 0.9 0.8, class:^(VSCode|code-url-handler)$
+# windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
+# windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop)$
+# windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
+# windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot-gui|org.gnome.baobab)$
+# windowrulev2 = opacity 0.9 0.8, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
+# windowrulev2 = opacity 0.8 0.7, class:^(app.drey.Warp)$ # Warp file transfer
+# windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
+# windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
+# windowrulev2 = opacity 0.9 0.8, class:^(xdg-desktop-portal-gtk)$ # gnome-keyring gui
+# windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
+# windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
 
 # windowrule v2 - size
 windowrulev2 = size 70% 70%, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
