--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -43,8 +43,8 @@ windowrulev2 = float, class:^([Bb]aobab|org.gnome.[Bb]aobab)$ # Disk usage analy
 windowrulev2 = float, title:(Kvantum Manager)
 windowrulev2 = float, class:^([Ss]team)$,title:^((?![Ss]team).*|[Ss]team [Ss]ettings)$
 windowrulev2 = float, class:^([Qq]alculate-gtk)$
-windowrulev2 = float, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = float, class:^([Ff]erdium)$
+windowrule = match:class ^(org.qbittorrent.qBittorrent)$, match:title negative:^(qBittorrent v), float on
 
 # windowrule v2 - opacity #enable as desired
 # windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
@@ -86,15 +86,13 @@ windowrulev2 = size 60% 70%, title:(Kvantum Manager)
 windowrulev2 = size 60% 70%, class:^(qt6ct)$
 windowrulev2 = size 70% 70%, class:^(evince|wihotspot-gui)$
 windowrulev2 = size 60% 70%, class:^(file-roller|org.gnome.FileRoller)$
-windowrulev2 = size 60% 70%, class:^([Ww]hatsapp-for-linux)$
-windowrulev2 = size 60% 70%, class:^([Ff]erdium)$
 
 #layerrule = unset,class:^([Rr]ofi)$
 #layerrule = blur,class:^([Rr]ofi)$
 #layerrule = ignorezero, <rofi>
 
-layerrule = ignorezero, overview
-layerrule = blur, overview
+layerrule = blur on, match:namespace overview
+layerrule = ignore_alpha 0, match:namespace overview
 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
 #windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
