--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,4 +1,3 @@
----
 gui:
   theme:
     activeBorderColor: ['#89b4fa', bold]
@@ -12,6 +11,6 @@ gui:
     defaultFgColor: ['#cdd6f4']
     searchingActiveBorderColor: ['#f9e2af']
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never
