--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -1,112 +1,167 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
-#windowrule = noblur,gamescope
-#windowrule = fullscreen,gamescope
-#windowrule = workspace 6 silent,^(gamescope)$
-
-# WINDOWRULE v2
-# windowrule v2 - position
-# windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
-# windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
-# windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
-
-# windowrule v2 to avoid idle for fullscreen apps
-windowrulev2 = idleinhibit fullscreen, class:^(*)$
-windowrulev2 = idleinhibit fullscreen, title:^(*)$
-windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 
-# windowrule v2 move to workspace (silent)
-# windowrulev2 = workspace 6 silent, class:^(virt-manager)$
-# windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
-# windowrule v2 - float
-windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$ 
-windowrulev2 = float, class:([Zz]oom|onedriver|onedriver-launcher)$
-windowrulev2 = float, class:([Tt]hunar), title:(File Operation Progress)
-windowrulev2 = float, class:([Tt]hunar), title:(Confirm to replace files)
-windowrulev2 = float, class:(xdg-desktop-portal-gtk)
-windowrulev2 = float, class:(org.gnome.Calculator), title:(Calculator)
-windowrulev2 = float, class:(codium|codium-url-handler|VSCodium), title:(Add Folder to Workspace)
-windowrulev2 = float, class:^([Rr]ofi)$
-windowrulev2 = float, class:^(eog)$
-windowrulev2 = float, class:^(pavucontrol|org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(nwg-look|qt5ct|qt6ct|mpv)$
-windowrulev2 = float, class:^(nm-applet|nm-connection-editor|blueman-manager)$
-windowrulev2 = float, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$ # system monitor
-windowrulev2 = float, class:^(yad)$ # icon browser
-windowrulev2 = float, class:^(wihotspot-gui)$ # wifi hotspot
-windowrulev2 = float, class:^(evince)$ # document viewer
-windowrulev2 = float, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
-windowrulev2 = float, class:^([Bb]aobab|org.gnome.[Bb]aobab)$ # Disk usage analyzer
-windowrulev2 = float, title:(Kvantum Manager)
-windowrulev2 = float, class:^([Ss]team)$,title:^((?![Ss]team).*|[Ss]team [Ss]ettings)$
-windowrulev2 = float, class:^([Qq]alculate-gtk)$
-windowrulev2 = float, class:^([Ff]erdium)$
-windowrule = match:class ^(org.qbittorrent.qBittorrent)$, match:title negative:^(qBittorrent v), float on
+#  Some samples on hwo to start apps on specific workspaces 
+# windowrule = match:tag email*, workspace 1
+# windowrule = match:tag browser*, workspace 2
+# windowrule = match:tag projects*, workspace 3
+# windowrule = match:tag screenshare*, workspace 4 silent
+# windowrule = match:tag gamestore*, workspace 5
+# windowrule = match:class ^(virt-manager)$, workspace 6 silent
+# windowrule = match:class ^(.virt-manager-wrapped)$, workspace 6 silent
+# windowrule = match:tag im*, workspace 7
+# windowrule = match:class obsidian, workspace 8
+# windowrule = match:tag games*, workspace 8
+# windowrule = match:tag multimedia*, workspace 9 silent
 
-# windowrule v2 - opacity #enable as desired
-# windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
-# windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser(-beta|-dev)?)$
-# windowrulev2 = opacity 0.9 0.6, class:^([Tt]horium-browser)$
-# windowrulev2 = opacity 0.9 0.8, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
-# windowrulev2 = opacity 0.9 0.8, class:^(google-chrome(-beta|-dev|-unstable)?)$
-# windowrulev2 = opacity 0.94 0.86, class:^(chrome-.+-Default)$ # Chrome PWAs
-# windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
-# windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
-# windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor)$
-# windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
-# windowrulev2 = opacity 0.9 0.8, class:^(Alacritty)$
-# windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
-# windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
-# windowrulev2 = opacity 0.9 0.7, class:^(VSCodium|codium-url-handler)$
-# windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
-# windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
-# windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
-# windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
-# windowrulev2 = opacity 0.9 0.8, class:^(org.gnome.Nautilus)$
-# windowrulev2 = opacity 0.9 0.8, class:^(VSCode|code-url-handler)$
-# windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
-# windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop)$
-# windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
-# windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot-gui|org.gnome.baobab)$
-# windowrulev2 = opacity 0.9 0.8, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
-# windowrulev2 = opacity 0.8 0.7, class:^(app.drey.Warp)$ # Warp file transfer
-# windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
-# windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
-# windowrulev2 = opacity 0.9 0.8, class:^(xdg-desktop-portal-gtk)$ # gnome-keyring gui
-# windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
-# windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
 
-# windowrule v2 - size
-windowrulev2 = size 70% 70%, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
-windowrulev2 = size 70% 70%, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = size 60% 70%, title:(Kvantum Manager)
-windowrulev2 = size 60% 70%, class:^(qt6ct)$
-windowrulev2 = size 70% 70%, class:^(evince|wihotspot-gui)$
-windowrulev2 = size 60% 70%, class:^(file-roller|org.gnome.FileRoller)$
 
-#layerrule = unset,class:^([Rr]ofi)$
-#layerrule = blur,class:^([Rr]ofi)$
-#layerrule = ignorezero, <rofi>
+# TAGS - add apps under appropriate tag to use the same settings
+# browser tags
+windowrule = match:class ^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr|[Ff]irefox-bin)$, tag +browser
+windowrule = match:class ^([Gg]oogle-chrome(-beta|-dev|-unstable)?)$, tag +browser
+windowrule = match:class ^(chrome-.+-Default)$, tag +browser
+windowrule = match:class ^([Cc]hromium)$, tag +browser
+windowrule = match:class ^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable))$, tag +browser
+windowrule = match:class ^(Brave-browser(-beta|-dev|-unstable)?)$, tag +browser
+windowrule = match:class ^([Tt]horium-browser|[Cc]achy-browser)$, tag +browser
+windowrule = match:class ^(zen-alpha|zen)$, tag +browser
 
-layerrule = blur on, match:namespace overview
-layerrule = ignore_alpha 0, match:namespace overview
+# notif tags
+windowrule = match:class ^(swaync-control-center|swaync-notification-window|swaync-client|class)$, tag +notif
 
-#windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
-#windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
-#windowrulev2 = opacity 0.8 0.8, pinned:1
+# KooL settings tag
+windowrule = match:title ^(KooL Quick Cheat Sheet)$, tag +KooL_Cheat
+windowrule = match:title ^(KooL Hyprland Settings)$, tag +KooL_Settings
+windowrule = match:class ^(nwg-displays|nwg-look)$, tag +KooL-Settings
 
-# Picture-in-a-Picture (PIP) rules: Oddly, some need re-duplication.  This is because the window for
-# PIP changes after on first launch, and will not inherant the rules...
-windowrulev2=opacity 0.95 0.75,title:^(Picture-in-Picture)$ # for opacity: [focus num] [bg num]
-# Interestingly, the opacity rule above doesn't need the reduplication?
-windowrulev2=pin,title:^(Picture-in-Picture)$ 
-#windowrulev2=pin,title:^(Firefox)$ 
-windowrulev2=float, title:^(Picture-in-Picture)$
-#windowrulev2=float, title:^(Firefox)$
-windowrulev2=size 25% 25%,title:^(Picture-in-Picture)$ 
-#windowrulev2=size 25% 25%,title:^(Firefox)$ 
-windowrulev2=move 72% 7%,title:^(Picture-in-Picture)$ 
-#windowrulev2=move 72% 7%,title:^(Firefox)$ 
+# terminal tags
+windowrule = match:class ^(Alacritty|kitty|kitty-dropterm)$, tag +terminal
+
+# email tags
+windowrule = match:class ^([Tt]hunderbird|org.mozilla.Thunderbird)$, tag +email
+windowrule = match:class ^(eu.betterbird.Betterbird)$, tag +email
+windowrule = match:class ^(org.gnome.Evolution)$, tag +email
+
+# project tags
+windowrule = match:class ^(codium|codium-url-handler|VSCodium)$, tag +projects
+windowrule = match:class ^(VSCode|code|code-url-handler)$, tag +projects
+windowrule = match:class ^(jetbrains-.+)$, tag +projects
+windowrule = match:class ^(dev.zed.Zed|antigravity)$, tag +projects
+
+# screenshare tags
+windowrule = match:class ^(com.obsproject.Studio)$, tag +screenshare
+
+# IM tags
+windowrule = match:class ^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$, tag +im
+windowrule = match:class ^([Ff]erdium)$, tag +im
+windowrule = match:class ^([Ww]hatsapp-for-linux)$, tag +im
+windowrule = match:class ^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$, tag +im
+windowrule = match:class ^(teams-for-linux)$, tag +im
+windowrule = match:class ^(im.riot.Riot|Element)$, tag +im
+
+# game tags
+windowrule = match:class ^(gamescope)$, tag +games
+windowrule = match:class ^(steam_app_\\d+)$, tag +games
+
+# gamestore tags
+windowrule = match:class ^([Ss]team)$, tag +gamestore
+windowrule = match:title ^([Ll]utris)$, tag +gamestore
+windowrule = match:class ^(com.heroicgameslauncher.hgl)$, tag +gamestore
+
+# file-manager tags
+windowrule = match:class ^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$, tag +file-manager
+windowrule = match:class ^(app.drey.Warp)$, tag +file-manager
+
+# wallpaper tags
+windowrule = match:class ^([Ww]aytrogen)$, tag +wallpaper
+
+# multimedia tags
+windowrule = match:class ^([Aa]udacious)$, tag +multimedia
+
+# multimedia-video tags
+windowrule = match:class ^([Mm]pv|vlc)$, tag +multimedia_video
+
+# settings tags
+windowrule = match:title ^(ROG Control)$, tag +settings
+windowrule = match:class ^(wihotspot(-gui)?)$, tag +settings
+windowrule = match:class ^([Bb]aobab|org.gnome.[Bb]aobab)$, tag +settings
+windowrule = match:class ^(gnome-disks|wihotspot(-gui)?)$, tag +settings
+windowrule = match:title (Kvantum Manager), tag +settings
+windowrule = match:class ^(file-roller|org.gnome.FileRoller)$, tag +settings
+windowrule = match:class ^(nm-applet|nm-connection-editor|blueman-manager)$, tag +settings
+windowrule = match:class ^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$, tag +settings
+windowrule = match:class ^(qt5ct|qt6ct)$, tag +settings
+windowrule = match:class (xdg-desktop-portal-gtk), tag +settings
+windowrule = match:class ^(org.kde.polkit-kde-authentication-agent-1)$, tag +settings
+windowrule = match:class ^([Rr]ofi)$, tag +settings
+windowrule = match:class ^(btrfs-assistant)$, tag +settings
+windowrule = match:class ^(timeshift-gtk)$, tag +settings
+
+# viewer tags
+windowrule = match:class ^(gnome-system-monitor|org.gnome.SystemMonitor|io.missioncenter.MissionCenter)$, tag +viewer
+windowrule = match:class ^(evince)$, tag +viewer
+windowrule = match:class ^(eog|org.gnome.Loupe)$, tag +viewer
+
+# Some special override rules
+windowrule = match:tag multimedia_video, no_blur on
+windowrule = match:tag multimedia_video, opacity 1.0
+windowrule = match:tag multimedia, no_blur on
+windowrule = match:tag multimedia, opacity 1.0
+
+# POSITION
+windowrule = match:title ^(ROG Control)$, center on
+windowrule = match:title ^(Keybindings)$, center on
+windowrule = match:class ^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$, center on
+windowrule = match:class ^([Ff]erdium)$, center on
+
+# windowrule to avoid idle for fullscreen apps
+windowrule = match:fullscreen true, idle_inhibit fullscreen
+windowrule = idle_inhibit fullscreen, match:fullscreen 1
+windowrule = idle_inhibit fullscreen, match:class ^(*)$
+windowrule = idle_inhibit fullscreen, match:title ^(*)$
+
+# FLOAT
+windowrule = match:tag KooL_Cheat, float on
+windowrule = match:tag wallpaper, float on, center on
+windowrule = match:tag settings, float on, center on
+windowrule = match:tag viewer, float on, center on
+windowrule = match:tag KooL-Settings, float on, center on
+windowrule = match:class ([Zz]oom|onedriver|onedriver-launcher), float on
+windowrule = match:class (org.gnome.Calculator|qalculate-gtk), float on
+windowrule = match:class ^(mpv|com.github.rafostar.Clapper)$, float on
+windowrule = match:class ^([Qq]alculate-gtk)$, float on
+windowrule = match:class ^([Ff]erdium)$, float on
+
+# popups and dialogue 
+windowrule = match:title ^(Authentication Required)$, float on, center on
+windowrule = match:class (codium|codium-url-handler|VSCodium) match:title negative:(.*codium.*|.*VSCodium.*), float on
+windowrule = match:class ^(com.heroicgameslauncher.hgl)$ match:title negative:(Heroic Games Launcher), float on
+windowrule = match:class ^([Ss]team)$ match:title negative:^([Ss]team)$, float on
+windowrule = match:title ^(Add Folder to Workspace)$, float on, size (monitor_w*0.7) (monitor_h*0.6), center on
+windowrule = match:title ^(Save As)$, float on, size (monitor_w*0.7) (monitor_h*0.6), center on
+windowrule = match:initial_title (Open Files), float on, size (monitor_w*0.7) (monitor_h*0.6)
+windowrule = match:title ^(SDDM Background)$, float on, center on, size (monitor_w*0.16) (monitor_h*0.12)
+windowrule = match:class ^(yad)$, float on, center on, size (monitor_w*0.2) (monitor_h*0.2)
+windowrule = match:class ^(hyprland-donate-screen)$, float on, center on
+
+# OPACITY
+# windowrule = match:tag browser, opacity 0.99 0.8
+# windowrule = match:tag projects, opacity 0.9 0.8
+# windowrule = match:tag im, opacity 0.94 0.86
+# windowrule = match:tag multimedia, opacity 0.94 0.86
+# windowrule = match:tag file-manager, opacity 0.9 0.8
+# windowrule = match:tag terminal, opacity 0.9 0.7
+# windowrule = match:tag settings, opacity 0.8 0.7
+# windowrule = match:tag viewer, opacity 0.82 0.75
+# windowrule = match:tag wallpaper, opacity 0.9 0.7
+# windowrule = match:class ^(gedit|org.gnome.TextEditor|mousepad)$, opacity 0.8 0.7
+# windowrule = match:class ^(deluge)$, opacity 0.9 0.8
+# windowrule = match:class ^(seahorse)$, opacity 0.9 0.8
+# windowrule = match:title ^(Picture-in-Picture)$, opacity 0.95 0.75
+
+# SIZE
+windowrule = match:tag KooL_Cheat, size (monitor_w*0.65) (monitor_h*0.9)
+windowrule = match:tag wallpaper, size (monitor_w*0.7) (monitor_h*0.7)
+windowrule = match:tag settings, size (monitor_w*0.7) (monitor_h*0.7)
+windowrule = match:class ^([Ff]erdium)$, size (monitor_w*0.6) (monitor_h*0.7
